--- a/src/app/Core/dashboard-seller/index/index.component.html
+++ b/src/app/Core/dashboard-seller/index/index.component.html
@@ -14,8 +14,8 @@
                                                                           style="font-size: 1rem"></i> اطلاعات کاربری
         </mat-list-item>
         <mat-divider></mat-divider>
-
-        <div *ngIf="localStorage.userJson.active === true">
+<!--        *ngIf="localStorage.userJson.active === true"-->
+        <div >
           <mat-list-item [routerLink]="['/seller/product']"><i class="pi pi-file p-pl-4 text-white"
                                                                style="font-size: 1rem"></i> محصولات من
           </mat-list-item>
