--- a/src/app/SharedComponent/footer/footer.component.html
+++ b/src/app/SharedComponent/footer/footer.component.html
@@ -124,7 +124,7 @@
   <!-- Copyright -->
   <div class="footer-copyright text-center text-white py-3">
     <p>
-      تمام حقوق سایت مربوط به فروشگاه به قیمت میباشد و هر نوع کپی برداری تخلف می باشد و پیگرد قانونی دارد.
+      تمامی حقوق سایت مربوط به شرکت <a class="text-white font-weight-bold" href="https://arkainvent.com/">دانش بنیان محاسبات نرم فناوری اطلاعات و ارتباطات آرکا</a> میباشد و هر نوع کپی برداری تخلف می باشد و پیگرد قانونی دارد.
     </p>
     <p>
       Designed & developed by <a class="text-white font-weight-bold font-italic" href="https://arkainvent.com/">arkainvent.com</a>
