--- a/src/app/Layout/products/products.component.html
+++ b/src/app/Layout/products/products.component.html
@@ -49,7 +49,8 @@
                   <div class="collapse" id="sub{{i}}">
                     <ul class="list-group-item-text mr-5 py-2">
                       <li (click)="filterByCategory(sub._id, '')">همه {{sub.title}}</li>
-                      <li *ngFor="let subSub of sub.SubSubCategory" (click)="filterByCategory(sub._id, subSub._id)">{{subSub.title}}</li>
+                      <li *ngFor="let subSub of sub.SubSubCategory"
+                          (click)="filterByCategory(sub._id, subSub._id)">{{subSub.title}}</li>
                     </ul>
                   </div>
                 </div>
@@ -139,11 +140,17 @@
             <div class="block-products-carousel-cell">
               <div class="product-card product-card-layout-grid">
                 <div class="product-card-actions-list">
-                  <button class="product-card-action product-card-action-quickview" type="button"
-                          aria-label="Quick view">
+                  <button [routerLink]="['detail',item.id]"
+                          pTooltip="مشاهده جزئیات" tooltipPosition="bottom"
+                          class="product-card-action product-card-action-quickview" type="button">
                     <svg width="16" height="16">
-                      <path
-                        d="M14,15h-4v-2h3v-3h2v4C15,14.6,14.6,15,14,15z M13,3h-3V1h4c0.6,0,1,0.4,1,1v4h-2V3z M6,3H3v3H1V2c0-0.6,0.4-1,1-1h4V3zM3,13h3v2H2c-0.6,0-1-0.4-1-1v-4h2V13z"></path>
+                      <g transform="translate(0.000000,16.000000) scale(0.100000,-0.100000)" stroke="none">
+                        <path d="M23 106 l-28 -24 24 -26 c32 -34 80 -35 118 -2 l28 24 -24 26 c-32
+      34 -80 35 -118 2z m82 -26 c0 -18 -6 -26 -23 -28 -24 -4 -38 18 -28 44 3 9 15
+      14 28 12 17 -2 23 -10 23 -28z"/>
+                        <path d="M64 89 c-10 -17 13 -36 27 -22 12 12 4 33 -11 33 -5 0 -12 -5 -16
+      -11z"/>
+                      </g>
                     </svg>
                   </button>
                   <button class="product-card-action product-card-action-wishlist" type="button"
@@ -164,11 +171,9 @@
                     </svg>
                   </button>
                 </div>
-                <div class="product-card-image" (click)="goDetail(FilteredProducts[item.id]['_id'])">
+                <div class="product-card-image">
                   <div class="image image-type-product">
-                    <a class="image-body">
-                      <img class="image-tag" [src]="FilteredProducts[item.id]['image']" alt="">
-                    </a>
+                    <img class="image-tag" [src]="FilteredProducts[item.id]['image']" alt="">
                   </div>
                 </div>
                 <div class="product-card-info text-right">
@@ -181,13 +186,13 @@
                   <div class="product-card-name">
                     <div>
                       <div class="product-card-badges">
-                        <!--                        <div class="tag-badge tag-badge-sale">%15</div>-->
                         <div class="tag-badge tag-badge-sale" *ngIf="FilteredProducts[item.id]['offer'] === true">
                           %{{FilteredProducts[item.id]['offerPercent']}}</div>
                         <div class="tag-badge tag-badge-sale"
                              *ngIf="FilteredProducts[item.id]['offer']===false">{{FilteredProducts[item.id]['topText']}}</div>
                       </div>
-                      <a>{{FilteredProducts[item.id]['title']}}</a>
+                      <a (click)="goDetail(FilteredProducts[item.id]['_id'])"
+                         class="product-title">{{FilteredProducts[item.id]['title']}}</a>
                     </div>
                   </div>
                 </div>
