--- a/src/app/Core/dashboard-seller/product-seller/register-product/register-product.component.html
+++ b/src/app/Core/dashboard-seller/product-seller/register-product/register-product.component.html
@@ -33,7 +33,7 @@
         <div class="p-field p-col">
           <label class="d-block">عنوان دسته</label>
           <p-dropdown appendTo="body" emptyFilterMessage="نتیجه ای یافت نشد"
-                      [options]="categories"
+                      [options]="categories" (onChange)="xx($event)"
                       formControlName="categoryID"
                       optionLabel="title" [filter]="true" placeholder="-- انتخاب کنید --">
             <ng-template pTemplate="selectedItem">
@@ -60,8 +60,24 @@
         </div>
         <div class="p-field p-col">
           <label for="subCategory">عنوان زیر دسته</label>
-          <input id="subCategory" type="text" pInputText
-                 formControlName="subCategory">
+
+          <p-dropdown appendTo="body" emptyFilterMessage="نتیجه ای یافت نشد"
+                      [options]="subCategory" (onChange)="onSubSubCategory($event)"
+                      formControlName="subCategory"
+                      optionLabel="title" [filter]="true" placeholder="-- انتخاب کنید --">
+            <ng-template pTemplate="selectedItem">
+              <div class="state-item state-item-value"
+                   *ngIf="form.controls['subCategory'].value">
+                <div>{{form.controls['subCategory'].value.title}}</div>
+              </div>
+            </ng-template>
+            <ng-template let-category pTemplate="item">
+              <div class="state-item text-right">
+                <div class="text-right">{{category.value.title}}</div>
+              </div>
+            </ng-template>
+          </p-dropdown>
+
           <ul class="mt-1 text-right list-inline"
               *ngFor="let error of errorMessages.subCategory">
             <li class="font-small text-danger font-weight-bold list-inline-item"
@@ -72,7 +88,40 @@
             </li>
           </ul>
         </div>
+        <div class="p-field p-col">
+          <label for="subSubCategory">عنوان زیر زیر دسته</label>
+
+          <p-dropdown appendTo="body" emptyFilterMessage="نتیجه ای یافت نشد"
+                      [options]="subSubCategory"
+                      formControlName="subSubCategory"
+                      optionLabel="title" [filter]="true" placeholder="-- انتخاب کنید --">
+            <ng-template pTemplate="selectedItem">
+              <div class="state-item state-item-value"
+                   *ngIf="form.controls['subSubCategory'].value">
+                <div>{{form.controls['subSubCategory'].value.title}}</div>
+              </div>
+            </ng-template>
+            <ng-template let-category pTemplate="item">
+              <div class="state-item text-right">
+                <div class="text-right">{{category.value.title}}</div>
+              </div>
+            </ng-template>
+          </p-dropdown>
+
+          <ul class="mt-1 text-right list-inline"
+              *ngFor="let error of errorMessages.subSubCategory">
+            <li class="font-small text-danger font-weight-bold list-inline-item"
+                *ngIf="form.get('subSubCategory').hasError(error.type)
+                            && (form.get('subSubCategory').dirty
+                            || form.get('subSubCategory').touched)">
+              {{ error.message }}
+            </li>
+          </ul>
+        </div>
       </div>
+
+
+
       <div class="p-fluid p-formgrid p-grid">
         <div class="p-field p-col">
           <label for="price">قیمت</label>
