--- a/src/app/Layout/products/products.component.css
+++ b/src/app/Layout/products/products.component.css
@@ -11,7 +11,12 @@
   font-family: IRANSans_Bold;
   font-size: larger;
 }
-
+.page-header-title h2{
+  font-weight: 500;
+  margin: unset!important;
+  font-family: IRANSans_Bold!important;
+  padding-top: 15px;
+}
 .filter-box ul{
   padding: 0;
 }
