--- a/src/app/Layout/seller/seller-footer/seller-footer.component.html
+++ b/src/app/Layout/seller/seller-footer/seller-footer.component.html
@@ -3,7 +3,7 @@
     <div class="row justify-content-center text-center">
       <div class="col-lg-12">
         <p>
-          تمام حقوق سایت مربوط به فروشگاه به قیمت میباشد و هر نوع کپی برداری تخلف می باشد و پیگرد قانونی دارد.
+          تمامی حقوق سایت مربوط به شرکت <a class="text-white font-weight-bold" href="https://arkainvent.com/">دانش بنیان محاسبات نرم فناوری اطلاعات و ارتباطات آرکا</a> میباشد و هر نوع کپی برداری تخلف می باشد و پیگرد قانونی دارد.
         </p>
         <p> Designed & developed by <a href="https://arkainvent.com/">arkainvent.com</a></p>
       </div>
