--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,5 +15,7 @@
   </div>
 </div>
 <router-outlet></router-outlet>
-
+<div *ngIf="isShow" (click)="gotoTop()" id="toTop" class="back-to-top-btn" style="display: block;">
+  <mat-icon>keyboard_arrow_up</mat-icon>
+</div>
 
