--- a/src/app/Layout/all-products/all-products.component.html
+++ b/src/app/Layout/all-products/all-products.component.html
@@ -35,7 +35,7 @@
       </div>
       <div class="col col-6 align-items-center">
         <div class="section-title text-left">
-          <button routerLink="/home/product" class="buttonall">همه محصولات</button>
+          <button routerLink="/home/product/0/0/0" class="buttonall">همه محصولات</button>
         </div>
       </div>
     </div>
